2003-08-26  Matthias Clasen  <maclas@gmx.de>

        Rename GtkMenuMerge to GtkUIManager. 
	
	* gtk/gtkuimanager.[hc]: New files. 
	* gtk/gtkmenumerge.[hc]: Removed. 

	* gtk/Makefile.am: 
	* gtk/gtk.h:
	* tests/testmerge.c: 
	* tests/testactions.c: 
	* demos/gtk-demo/appwindow.c: Replace all uses of GtkMenuMerge by GtkUIManager.

	* demos/gtk-demo/appwindow.c: Make GtkMenuMerge demo less intimidating: add comments to
	entries array, remove newlines from ui definition. Don't use the ::add_widget signal.

Mon Aug 25 17:28:04 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtknotebook.c (gtk_notebook_forall): Don't
	include page->menu_label - causes various problems,
	including #12047.

Mon Aug 25 23:21:43 2003  Kristian Rietveld  <kris@gtk.org>

	Merge from stable.

	Fixes #115871, reported by Michael Natterer.

	* gtk/gtktreeprivate.h: added GtkTreeSelectMode enum,
	added ctrl_pressed and shift_pressed bitfields,
	(_gtk_tree_selection_internal_select_node): replace GdkModifierType
	arg with GtkTreeSelectMode.

	* gtk/gtktreeselection.c (gtk_tree_selection_set_mode),
	(gtk_tree_selection_select_path), (gtk_tree_selection_unselect_path),
	(_gtk_tree_selection_internal_select_node): all updated for
	GdkModifierType -> GtkTreeSelectMode move.

	* gtk/gtktreeview.c (gtk_tree_view_button_press): set ctrl_pressed
	and shift_pressed around selection handling block,
	(gtk_tree_view_real_select_cursor_row),
	(gtk_tree_view_real_toggle_cursor_row),
	(gtk_tree_view_real_selection_cursor_parent),
	(gtk_tree_view_real_set_cursor): use ctrl_pressed and shift_pressed,
	instead of checking the event state. And also updates for the
	GdkModifierType -> GtkTreeSelectMode move.

Wed Aug 20 21:26:49 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkplug.c (gtk_plug_focus): Send the focus on
	to the parent when there was no focus widget before
	and no focus widget after - that is, when there are
	no focusable widgets. (#108678, help tracking it